--- a/css/styles.css
+++ b/css/styles.css
@@ -128,12 +128,16 @@ gap: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Hero Section*/
 .hero { 
+margin: auto;
 background-color:#2E2F42; 
 padding: 188px 0; 
+background-image: ;
 } 
 
 .hero-content {
@@ -225,6 +229,17 @@ letter-spacing: 0.02em;
 .features-list {
 display: flex;
 gap: 24px;
+}
+
+.features-icon {
+border: 1px solid #8e8f99;
+border-radius: 4px;
+width: 264px;
+height: 112px;
+background:  #f4f4fd;
+margin-bottom: 8px;
+justify-content: ;
+
 }
 
 .features-item {
