--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,20 @@
 /* Main Styles*/
 
 body {
-    font-family: "Roboto", sans-serif;
-    color:  #434455;
-    background-color: #fff;
+font-family: "Roboto", sans-serif;
+color:  #434455;
+background-color: #fff;
 }
 
 /* Reset*/
 a {
-    text-decoration: none;
+text-decoration: none;
 }
 
 ul,ol {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-    
+list-style-type: none;
+margin: 0;
+padding-left: 0;
 }
 
 img {
@@ -24,86 +23,86 @@ max-width: 100%;
 }
 
 h1,h2,h3,h4,h5,h6,p {
-    margin: 0;
+margin: 0;
 }
 
 /* Common*/
 .container {
-    max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+max-width: 1158px;
+padding-left: 15px;
+padding-right: 15px;
+margin-left: auto;
+margin-right: auto;
 }
 
 /* Header*/
 
 .header {
-    align-items: center;
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
+align-items: center;
+border-bottom: 1px solid #e7e9fc;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
+0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
 }
 
 .nav {
-    display: flex;
-    align-items: center;
+display: flex;
+align-items: center;
 }
 
 .header-box { 
-    justify-content: space-between; 
-    align-items: center; 
-    flex-direction: row; 
-    width: 1158px; 
-    padding: 0 15px; 
-    display: flex; 
+justify-content: space-between; 
+align-items: center; 
+flex-direction: row; 
+width: 1158px; 
+padding: 0 15px; 
+display: flex; 
 } 
 
 .logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17em;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
+font-family: "Raleway", sans-serif;
+font-weight: 700;
+font-size: 18px;
+line-height: 1.17em;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4d5ae5;
 }
 
 .logo-header {
-    color: #2e2f42;
-    margin-right: 76px;
+color: #2e2f42;
+margin-right: 76px;
 }
 
 .nav-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+display: flex;
+align-items: center;
+gap: 40px;
 }
 
 .nav-link {
-    display: block;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    padding: 24px 0;
-    transition: color 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+display: block;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #2e2f42;
+padding: 24px 0;
+transition: color 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link.current {
-    position: relative;
+position: relative;
 }
 
 .nav-link.current::after {
-    content:"";
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
+content:"";
+width: 100%;
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;
+background-color: #404bbf;
+border-radius: 2px;
 }
 .nav-link:hover, 
 .nav-link:focus 
@@ -114,8 +113,8 @@ h1,h2,h3,h4,h5,h6,p {
 } 
 
 .address {
-    font-style: normal;
-    text-align: center;
+font-style: normal;
+text-align: center;
 }
 
 .address-list {
@@ -125,11 +124,11 @@ gap: 40px;
 }
 
 .address-link {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    transition: color 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+transition: color 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Hero Section*/
@@ -141,9 +140,9 @@ background-image: ;
 } 
 
 .hero-content {
-    max-width: 1440px;
-    text-align: center;
-    margin:auto
+max-width: 1440px;
+text-align: center;
+margin:auto
 }
 
 .hero-title { 
@@ -246,12 +245,12 @@ align-items: center;
 .features-item {
 width: calc((100% - 72px)/ 4);
 }
+
 .our-team {    
 background-color: #f4f4fd;   
 text-align: center; 
 padding: 120px 0;
 } 
-
 
 .team-card { 
 text-align: center; 
@@ -261,20 +260,42 @@ border-radius: 0px 0px 4px 4px;
 background-color:  #fff
 } 
 
-.team-card:first-child {
-width: calc(((100% - 72px)/ 4));
-border-radius: 0px 0px 4px 4px;
-}
-
 .our-team-list {
 display: flex;
 justify-content: space-evenly;
 gap: 24px;
 flex-wrap: wrap;
 }
-
-.team-item-description {
-padding: 32px 0;
+.team-card-description {
+padding: 32px 0px;
+}
+.team-card-soc-links {
+display: flex;
+justify-content: center;
+gap: 24px;
+margin-top: 8px;
+}
+.team-soc-link-item {
+width: 40px;
+height: 40px;
+}
+.team-soc-link {
+background-color: #4d5ae5;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: 100%;
+border-radius: 50%;
+transition: color 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-card-soc-icon {
+fill: #f4f4fd;
+}
+.team-soc-link:hover,
+.team-soc-link:focus {
+background-color: #404bbf;
 }
 
 .portfolio {
