--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,21 @@ background-color: #2e2f42;
 padding: 100px 0;
 }
 
+footer-position{
+display: flex;
+align-items: baseline;
+} 
+
+.footer-link {
+max-width: 264px;
+margin-right: 120px;
+}
+
+.footer-link {
+display: inline-block;
+margin-bottom: 16px;
+}
+
 .logo-footer {
 color: #f4f4fd;
 }
@@ -345,7 +360,50 @@ letter-spacing: 0.02em;
 width: 264px; 
 }
 
-.footer-link {
-display: inline-block;
-margin-bottom: 16px;    
+.soc-media-text {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
+}
+
+.footer-soc-media {
+width: 208px;
+}
+
+.footer-soc-links-list {
+display: center;
+justify-content: center;
+gap: 16px;
+}
+
+.footer-soc-link-item {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 40px;
+height: 40px;
+}
+
+.footer-soc-link {
+background-color: #4d5ae5;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: 100%;
+border-radius: 50%;
+transition: color 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+background-color: #31d0aa;
+}
+
+.footer-soc-icon {
+fill:#f4f4fd
 }
