--- a/css/styles.css
+++ b/css/styles.css
@@ -334,10 +334,14 @@ background-color: #2e2f42;
 padding: 100px 0;
 }
 
-footer-position {
+.footer-position {
 display: flex;
 align-items: baseline;
 } 
+
+.footer-info{
+margin-right: 120px;
+}
 
 .footer-link {
 max-width: 264px;
@@ -374,7 +378,7 @@ width: 208px;
 }
 
 .footer-soc-links-list {
-display: center;
+display: flex;
 justify-content: center;
 gap: 16px;
 }
@@ -395,8 +399,7 @@ align-items: center;
 width: 100%;
 height: 100%;
 border-radius: 50%;
-transition: color 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:hover,
