--- a/css/styles.css
+++ b/css/styles.css
@@ -105,10 +105,10 @@ background-color: #404bbf;
 border-radius: 2px;
 }
 .nav-link:hover, 
-.nav-link:focus 
+.nav-link:focus, 
+.nav-link.current,
 .address-link:hover,
-.address-link:focus
-.nav-link.current { 
+.address-link:focus { 
 color: #404bbf; 
 } 
 
@@ -136,11 +136,12 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 margin: auto;
 background-color:#2E2F42; 
 padding: 188px 0; 
-background-image: ;
+background-image: linear-gradient(
+to bottom, rgba(46,47,66,0.7), rgba(46,47,66,0.7)
+),
 } 
 
 .hero-content {
-max-width: 1440px;
 text-align: center;
 margin:auto
 }
@@ -150,7 +151,6 @@ font-size: 56px;
 font-weight: 700;
 line-height: 1.07;
 letter-spacing: 0.02em;
-text-align: center;
 color: #fff;   
 max-width: 496px;
 margin: auto;
@@ -305,19 +305,31 @@ padding-bottom: 120px;
 
 .portfolio-list {
 display: flex;
+justify-content: center;
+align-items: center;
 gap: 48px 24px;
 flex-wrap: wrap;
 }
 
-.portfolio-item {
-width: calc((100% - 48px)/ 3);   
+.portfolio-list-item {
+width: calc((100% - 48px)/ 3);
+box-shadow: none;
+transition: box-shadow 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.item-description {
+.portfolio-item-description {
 padding: 32px 16px;
-border-top: none;
 }
 
+.portfolio-item-box {
+position: relative;
+overflow: hidden;
+
+.portfolio-item-text {
+    
+}
+}
 .portfolio-border {
 border: 1px solid #e7e9fc;
 border-top: none;
