--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,11 @@ padding: 188px 0;
 background-image: linear-gradient(
 to bottom, rgba(46,47,66,0.7), rgba(46,47,66,0.7)
 ),
+url(../images/hero-img.jpg);
+background-position: center center;
+background-size: cover;
+background-repeat: no-repeat;
+max-width: 1440px;
 } 
 
 .hero-content {
