--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background: #4d5ae5;
 border-width: 0px;
 min-width: 169px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 button:hover, 
