--- a/css/styles.css
+++ b/css/styles.css
@@ -246,10 +246,11 @@ margin-bottom: 8px;
 display: flex;
 justify-content: center;
 align-items: center;
+fill: #404bbf;
 }
 
 .features-item {
-width: calc((100% - 72px)/ 4);
+width: calc(((100% - 72px)/ 4));
 }
 
 .our-team {    
