--- a/css/styles.css
+++ b/css/styles.css
@@ -294,8 +294,7 @@ align-items: center;
 width: 100%;
 height: 100%;
 border-radius: 50%;
-transition: color 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-card-soc-icon {
 fill: #f4f4fd;
