--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ padding: 120px 0;
 
 .team-card { 
 text-align: center; 
-width: 264px;
+width: calc((100% - 72px) / 4);
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 border-radius: 0px 0px 4px 4px;
 background-color:  #fff
