--- a/css/styles.css
+++ b/css/styles.css
@@ -314,13 +314,14 @@ justify-content: center;
 align-items: center;
 gap: 48px 24px;
 flex-wrap: wrap;
+column-gap: 24px;
+row-gap: 48px;
 }
 
 .portfolio-list-item {
 width: calc((100% - 48px)/ 3);
 box-shadow: none;
-transition: box-shadow 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item-description {
@@ -332,9 +333,27 @@ position: relative;
 overflow: hidden;
 
 .portfolio-item-text {
-    
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;    
+background-color: #4d5ae5;
+padding: 40px 32px;
+position: absolute;
+width: 100%;
+height: 100%;
+top: 0;
+left: 0;
+transform: translateY(100%);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-list-item:hover .portfolio-item-text,
+.portfolio-list-item:focus .portfolio-item-text {
+transform: translateY(100%);   
 }
+
 .portfolio-border {
 border: 1px solid #e7e9fc;
 border-top: none;
