--- a/css/styles.css
+++ b/css/styles.css
@@ -347,13 +347,13 @@ width: 100%;
 height: 100%;
 top: 0;
 left: 0;
-transform: translateY(0%);
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover .portfolio-item-text,
 .portfolio-list-item:focus .portfolio-item-text {
-transform: translateY(100%);   
+transform: translateY(0%);   
 }
 
 .portfolio-border {
