--- a/css/styles.css
+++ b/css/styles.css
@@ -316,11 +316,12 @@ gap: 48px 24px;
 flex-wrap: wrap;
 column-gap: 24px;
 row-gap: 48px;
+box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item {
 width: calc((100% - 48px)/ 3);
-box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: none;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
