--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,7 @@ row-gap: 48px;
 .portfolio-list-item {
 width: calc((100% - 48px)/ 3);
 box-shadow: none;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover {
